# cityweather

./: .dockerignore  .gitignore  Dockerfile  app.py  cityweather.py  pyproject.toml  requirements.txt
cityweather/: __main__.py  app.py  config.py  openweatherclient.py  schemas.py  service.py
resources/: config.properties  openweatherclient.py  service.py
tests/: conftest.py  test_openweatherclient.py  test_service.py
tests/resources/: test_openweatherclient.py  test_service.py
